<resources>
    <string name="app_name">IDO-LIST</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="verify_your_email">VERIFY YOUR EMAIL</string>
    <string name="sub_heading">Go and check your gmail and verify your mail by clicking the following link there</string>


</resources>